[package]
name = "rag-redis-mcp-native"
version.workspace = true
edition.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# MCP protocol
serde.workspace = true
serde_json = "1.0.145"
jsonrpc-core = "18.0"

# RAG system library
rag-redis-system = { path = ".." }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async channels
async-channel = "2.3"
futures = "0.3"

# Configuration
config = "0.15.15"

[[bin]]
name = "rag-redis-mcp"
path = "src/main.rs"
