[package]
name = "rag-redis-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["RAG-Redis Development Team"]
description = "MCP server for RAG-Redis system providing document ingestion, vector search, and memory management"
license = "MIT"

[dependencies]
# Core RAG system
rag-redis-system = { path = ".." }

# Async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# JSON-RPC and MCP protocol
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# I/O
tokio-util = { version = "0.7", features = ["codec"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"

[[bin]]
name = "mcp-server"
path = "src/main.rs"